fix: override the invisible class from Mastodon in post content again to make https visible

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,4 +21,8 @@
   .post-meta {
     @apply text-base sm:text-sm;
   }
+
+  .prose .invisible {
+    visibility: visible !important;
+}
 }
